[gd_scene load_steps=2 format=3 uid="uid://b2gi1xlrdmw1p"]

[ext_resource type="Script" path="res://gui/task_tracking/database_manager/database_manager.gd" id="1_64y23"]

[node name="DatabaseManager" type="PanelContainer"]
clip_contents = true
custom_minimum_size = Vector2(500, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_type_variation = &"Panel_Container_Secondary"
script = ExtResource("1_64y23")

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="DatabaseManagerVBox" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2

[node name="DatabaseManagerTitle" type="Label" parent="MainMargin/DatabaseManagerVBox"]
layout_mode = 2
theme_type_variation = &"Label_Title_Secondary"
text = "Database Manager"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MainMargin/DatabaseManagerVBox"]
layout_mode = 2
theme_type_variation = &"HSeparator_None"

[node name="Label" type="Label" parent="MainMargin/DatabaseManagerVBox"]
layout_mode = 2
theme_type_variation = &"Label_Medium"
text = "Current Database:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="CurrentDatabaseLabel" type="Label" parent="MainMargin/DatabaseManagerVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Label_Medium"
text = "[ Database Not Loaded ]"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainMargin/DatabaseManagerVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DatabaseGrid" type="GridContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="NewDatabaseButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Medium"
text = "New Database"

[node name="NewDatabasePanel" type="PanelContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer"]
layout_mode = 2

[node name="NewDatabaseLabel" type="Label" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "New Database"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HouseholdNameLineEdit" type="LineEdit" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Household Name"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true

[node name="DatabaseTitleLineEdit" type="LineEdit" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "or Database Title"
alignment = 1

[node name="FileNamePreviewLabel" type="Label" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "( File Preview )"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="DatabaseAcceptButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="DatabaseCancelButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cancel"

[node name="CloneDatabaseButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Medium"
text = "Clone Current
Database"

[node name="CloneDatabasePanel" type="PanelContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="CloneLabel" type="Label" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Database Clone Name"
horizontal_alignment = 1

[node name="CloneHouseholdNameLineEdit" type="LineEdit" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Household Name"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true

[node name="CloneDatabaseTitleLineEdit" type="LineEdit" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "or Database Title"
alignment = 1

[node name="CloneFilePreviewLabel" type="Label" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "( File Preview )"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloneAcceptButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Accept"

[node name="CloneBackButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Back"

[node name="CloneCancelButton" type="Button" parent="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="TaskCSVHBox" type="HBoxContainer" parent="MainMargin/DatabaseManagerVBox"]
visible = false
layout_mode = 2
alignment = 1

[node name="ImportTasksheet" type="Button" parent="MainMargin/DatabaseManagerVBox/TaskCSVHBox"]
layout_mode = 2
disabled = true
text = "Import Task"

[node name="ExportTaskCSV" type="Button" parent="MainMargin/DatabaseManagerVBox/TaskCSVHBox"]
layout_mode = 2
disabled = true
text = "Export Task"

[node name="HSeparator" type="HSeparator" parent="MainMargin/DatabaseManagerVBox"]
visible = false
layout_mode = 2

[node name="ProfileLabel" type="Label" parent="MainMargin/DatabaseManagerVBox"]
visible = false
layout_mode = 2
theme_type_variation = &"Label_Large"
text = "Profile Data"
horizontal_alignment = 1

[node name="ProfileCSVHBox" type="HBoxContainer" parent="MainMargin/DatabaseManagerVBox"]
visible = false
layout_mode = 2
alignment = 1

[node name="ImportProfileCSV" type="Button" parent="MainMargin/DatabaseManagerVBox/ProfileCSVHBox"]
visible = false
layout_mode = 2
disabled = true
text = "Import Profile Data"

[node name="ExportProfileCSV" type="Button" parent="MainMargin/DatabaseManagerVBox/ProfileCSVHBox"]
visible = false
layout_mode = 2
disabled = true
text = "Export Profile Data from Current Data"

[node name="HSeparator3" type="HSeparator" parent="MainMargin/DatabaseManagerVBox"]
layout_mode = 2

[node name="CloseManager" type="Button" parent="MainMargin/DatabaseManagerVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"Button_Medium"
text = "Close Manager"

[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabaseButton" to="." method="_on_new_database_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox/HBoxContainer/DatabaseAcceptButton" to="." method="_on_database_accept_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/NewDatabasePanel/Margin/CenterContainer/VBox/HBoxContainer/DatabaseCancelButton" to="." method="_on_database_cancel_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabaseButton" to="." method="_on_clone_database_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloneAcceptButton" to="." method="_on_clone_accept_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloneBackButton" to="." method="_on_clone_back_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/ScrollContainer/DatabaseGrid/CloneDatabasePanel/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/CloneCancelButton" to="." method="_on_clone_cancel_button_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/TaskCSVHBox/ImportTasksheet" to="." method="_on_import_tasksheet_pressed"]
[connection signal="pressed" from="MainMargin/DatabaseManagerVBox/CloseManager" to="." method="_on_close_manager_pressed"]
